# Eclipse-Ditto-with-SionnaRT

./: .gitignore  README.md  config.yaml  pyproject.toml
docker/: dev.env  docker-compose.yml
requirements/: requirements.txt
src/: config.yaml
src/app/: SionnaRTSimulator.py  config.py  mock_device.py  mqtt_publisher.py  mqtt_subscriber.py  sionna_simulator.py  sionna_worker.py  sionnart.py
src/app/core/: ditto_manager.py  engine.py  renderer.py  scene_manager.py  sionna_engine.py  sionna_renderer.py
src/app/devices/: mock_device.py
src/app/geomap_processor/: README.md  building_mesher.py  dem_downloader.py  dem_processor.py  geo2sigmap.py  scene_updater.py  telecom_manager.py  utils.py
src/app/services/: ditto_manager.py  mqtt_client.py  rss_measurer.py
src/app/simulation/: coverage.py  engine.py  renderer.py  scene_manager.py  shading_utils.py  simulator_cli.py  visual_builder.py  worker_service.py
src/app/utils/: config.py  geo2sigmap.py  telecom_manager.py
src/connections/: outgoing_map.js  target_connection.json
src/ditto/connections/: incoming_map.js  source_connection.json
src/ditto/things/: phone.json
src/policies/: policy.json
src/scene/: povo_scene.xml
src/scene/meshes/: BUP_-_Biblioteca_Universitaria_Povo-itu_concrete.ply  BUP_-_Biblioteca_Universitaria_Povo-itu_glass.ply  Fondazione_Bruno_Kessler-itu_concrete.ply  Fondazione_Bruno_Kessler-itu_glass.ply  Fondazione_Bruno_Kessler_001-itu_concrete.ply  Fondazione_Bruno_Kessler_001-itu_glass.ply  Fondazione_Bruno_Kessler_002-itu_concrete.ply  Fondazione_Bruno_Kessler_002-itu_glass.ply  Guardiola-itu_concrete-001.ply  Guardiola-itu_concrete.ply  Mensa_Povo_1-itu_concrete.ply  Mensa_Povo_1-itu_glass.ply  Plane.ply  element-itu_concrete.ply  element-itu_glass.ply  element_001-itu_brick-001.ply  element_001-itu_brick.ply  element_002-itu_brick.ply  element_002-itu_concrete.ply  element_003-itu_brick.ply  element_003-itu_concrete.ply  element_004-itu_brick.ply  element_004-itu_concrete.ply  element_005-itu_brick.ply  element_005-itu_concrete.ply  element_006-itu_brick-001.ply  element_006-itu_brick.ply  element_007-itu_concrete-001.ply  element_007-itu_concrete.ply  element_008-itu_brick.ply  element_008-itu_concrete.ply  element_009-itu_brick.ply  element_009-itu_concrete.ply  element_010-itu_brick.ply  (+97 more)
src/scripts/: mqtt_publisher.py  mqtt_subscriber.py  sionnart.py
src/things/: phone.json
(+8 files in other folders)
